--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Ijeoma Ani | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Ijeoma Ani | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Ijeoma Ani" width="200">
+        <p>Hi, I am Ijeoma Ani a passionate web developer who specializes in creating modern, user-friendly, and
+            responsive web
+            applications. With a strong foundation in front-end and back-end technologies, I build digital
+            experiences that are
+            both visually appealing and technically robust.</p>
+    </main>
+    <footer>
+        <p>
+            &copy;2025 😊 Ijeoma Ani 😊 Akwanga, Nasarawa State
+        </p>
+    </footer>
 </body>
+
 </html>
