--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -9,7 +9,9 @@
 
 <body>
     <h1>My First Page</h1>
-    <p>My favorite color is: Green </p>
+    <p>My favorite color is: yellow </p>
+    <p>I am learning web development</p>
+
 </body>
 
 </html>
