--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Ijeooma Ani">
+    <title>Basic HTML Structure</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.w3schools.com/html/">HTML Tutorial</a></li>
+            <li><a href="https://nextjs.org/">The React Framework for the Web</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>Heading 1
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reprehenderit magnam nesciunt. Doloremque
+                dolor, nam quisquam ab sit explicabo sequi molestiae neque cupiditate inventore ipsum ex. Sunt
+                consequuntur corporis fuga!</p>
+        </section>
+        <section>Heading 2
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, adipisci. Hic iste, nisi unde eum ipsam
+                temporibus! Ex accusamus, modi sit ipsum ad ab suscipit numquam. Illum accusantium voluptatem
+                cupiditate.</p>
+        </section>
+        <aside>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-273999-wallpaper.jpg"
+                alt="Aba Nigeria Temple" width="200">
+        </aside>
+        <footer>
+            <p>Ijeoma Ani</p>
+        </footer>
+    </main>
 </body>
+
 </html>
