--- a/week01/images.html
+++ b/week01/images.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Image</title>
+    <title>me myself and I</title>
 </head>
+
 <body>
-    <h1>The Temple</h1>
+    <h1>profile</h1>
     <p>This is an image of the beautiful temple in Accra, Ghana:</p>
-    <img src="images/temple-large.jpeg" alt="The Accra Ghana Temple">
-    
+    <img src="images/profile.jpg" alt="my profile picture">
+
 </body>
+
 </html>
