--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Ijeoma Ani | WDD 130</title>
+    <meta name="description" content="This is my WDD130 student home page.">
+    <meta name="author" content="Ani Ijeoma">
 </head>
 
 <body>
@@ -26,6 +28,17 @@
 
 
     </main>
+    <aside>
+        <h2>I am from Nigeria</h2>
+        <img src="images/city-gate.jpg" alt="Abuja City Gate">
+        <p>Nigeria is a vibrant nation rich in cultural diversity and natural wealth. Home to over 250 ethnic groups, it
+            boasts
+            colorful traditions, languages, music, and festivals that reflect its deep heritage. Blessed with abundant
+            natural
+            resources like oil, natural gas, coal, tin, and fertile land, Nigeria stands as a cultural powerhouse and an
+            economic
+            leader in Africa.</p>
+    </aside>
     <footer>
         <p>
             &copy;2025 😊 Ijeoma Ani 😊 Akwanga, Nasarawa State
