--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
     <aside>
         <h2>I am from Nigeria</h2>
-        <img src="images/city-gate.jpg" alt="Abuja City Gate">
+        <img src="images/city-gate.jpg" alt="Abuja City Gate" width="200">
         <p>Nigeria is a vibrant nation rich in cultural diversity and natural wealth. Home to over 250 ethnic groups, it
             boasts
             colorful traditions, languages, music, and festivals that reflect its deep heritage. Blessed with abundant
