--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Ijeoma Ani | WDD 130</title>
-    <meta name="description" content="This is my WDD130 student home page.">
+    <meta name="description"
+        content="This is my WDD130 student home page. Here you will find all the links to my work, and activities uploaded to github.">
     <meta name="author" content="Ani Ijeoma">
 </head>
 
