--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Ijeoma Ani | WDD 130</title>
     <meta name="description"
-        content="This is my WDD130 student home page. Here you will find all the links to my work, and activities uploaded to github.">
+        content="This WDD130 project showcases Nigeria’s vibrant culture, diverse ethnic heritage, and abundant natural resources through a creative web design. Explore the beauty of Nigeria’s traditions, arts, and festivals, alongside its rich deposits of oil, gas, and minerals. Designed to inform and inspire, this site highlights Nigeria’s cultural pride and economic potential in a visually engaging and educational format.">
     <meta name="author" content="Ani Ijeoma">
 </head>
 
