--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Ijeoma Ani | WDD 130</h1>
-        <img src="images/images/profile.jpg" alt="Ijeoma Ani" width="200">
+        <img src="images/profile.jpg" alt="Ijeoma Ani" width="200">
         <p>Hi, I am Ijeoma Ani a passionate web developer who specializes in creating modern, user-friendly, and
             responsive web
             applications. With a strong foundation in front-end and back-end technologies, I build digital
@@ -31,7 +31,7 @@
     </main>
     <aside>
         <h2>I am from Nigeria</h2>
-        <img src="images/images/city-gate.jpg" alt="Abuja City Gate" width="200">
+        <img src="images/city-gate.jpg" alt="Abuja City Gate" width="200">
         <p>Nigeria is a vibrant nation rich in cultural diversity and natural wealth. Home to over 250 ethnic groups, it
             boasts
             colorful traditions, languages, music, and festivals that reflect its deep heritage. Blessed with abundant
