--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             both visually appealing and technically robust.</p>
     </main>
     <aside>
-        <h2>I am from Nigeria</h2>
+        <h2>Abuja, Nigeria</h2>
         <img src="images/city-gate.jpg" alt="Abuja City Gate" width="200">
         <p>Nigeria is a vibrant nation rich in cultural diversity and natural wealth. Home to over 250 ethnic groups, it
             boasts
