--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,9 +44,9 @@
     <footer>
         <p>&copy;2025 White Water Rafting | Ani Ijeoma</p>
         <nav class="socialmedia">
-            <a href="https://www.facebook.com"><img src="images/facebook.svg" alt="facebook Icon"></a>
-            <a href="https://www.instagram.com"><img src="images/instagram.svg" alt="instagram icon"></a>
-            <a href="https://www.youtube.com"><img src="images/youtube.svg" alt="youtube icon"></a>
+            <a href="https://www.facebook.com"><img src="images/facebook.png" alt="facebook Icon"></a>
+            <a href="https://www.instagram.com"><img src="images/instagram.png" alt="instagram icon"></a>
+            <a href="https://www.youtube.com"><img src="images/youtube.png" alt="youtube icon"></a>
         </nav>
     </footer>
 </body>
