--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="At White, we live for adventure and the rush of the rapids. With years of experience guiding explorers through some of the most thrilling rivers, we combine safety, excitement, and breathtaking scenery for an unforgettable journey.">
-    <meta name="Author" content="Ani Ijeoma">
+        content="At White, we live for adventure and the rush of the rapids. With years of experience guiding explorers through some of the most thrilling rivers.">
+    <meta name="author" content="Ani Ijeoma">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About us: White Water Rafting</title>
 </head>
