--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     <header>
         <img src="images/logo.png" alt="White Water Rafting Logo">
         <nav>
-            <a href="wwr/index">Home</a>
+            <a href="index">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
